--- a/catalog/view/theme/yankee/stylesheet/stylesheet.css
+++ b/catalog/view/theme/yankee/stylesheet/stylesheet.css
@@ -5,6 +5,8 @@ body {
 	font-size: 12px;
 	line-height: 20px;
 	width: 100%;
+	padding-bottom: 70px;
+	padding-top: 70px;
 }
 h1, h2, h3, h4, h5, h6 {
 	color: #444;
