--- a/catalog/view/theme/yankee/stylesheet/stylesheet.css
+++ b/catalog/view/theme/yankee/stylesheet/stylesheet.css
@@ -312,7 +312,7 @@ div.required .control-label:before {
 /* footer */
 footer {
 	margin-top: 30px;
-	padding-top: 30px;
+	/*padding-top: 30px;*/
 	background-color: #303030;
 	border-top: 1px solid #ddd;
 	color: #e2e2e2;
