--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -310,7 +310,8 @@ div.required .control-label:before {
 /* footer */
 footer {
 	margin-top: 30px;
-	padding-top: 30px;
+	/*padding-top: 30px;*/
+	padding-top: 13px;
 	background-color: #303030;
 	border-top: 1px solid #ddd;
 	color: #e2e2e2;
